# python-query-generator

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: formatting.yml  tests.yml
query_generator/: __init__.py  exceptions.py  schemas.py
query_generator/config/: settings.py
query_generator/services/: query_service.py
query_generator/tests/: test_bigquery_query_generator.py  test_mongo_query_generator.py  test_postgres_query_generator.py
query_generator/utils/: __init__.py  db_connection_factory.py  query_generator_factory.py
query_generator/utils/connections/: base_connection.py  bigquery_connection.py  mongo_connection.py  postgres_connection.py
query_generator/utils/query_generators/: base_query_generator.py  bigquery_query_generator.py  mongo_query_generator.py  postgres_query_generator.py
scripts/: generate_json_schema.py
src/: __init__.py
src/python_query_generator/: exceptions.py  schemas.py
src/python_query_generator/config/: settings.py
src/python_query_generator/scripts/: generate_json_schema.py
src/python_query_generator/services/: __init__.py  query_service.py
src/python_query_generator/static/: query_json_schema.json
src/python_query_generator/utils/: db_connection_factory.py  query_generator_factory.py
src/python_query_generator/utils/connections/: bigquery_connection.py  mongo_connection.py  postgres_connection.py
src/python_query_generator/utils/query_generators/: base_query_generator.py  bigquery_query_generator.py  mongo_query_generator.py  postgres_query_generator.py
tests/: test_bigquery_query_generator.py  test_mongo_query_generator.py  test_postgres_query_generator.py
