[tool.poetry]
name = "query_generator"
version = "0.1.0"
description = "A library for generating queries based on a central JSON configuration"
authors = ["Bhavani Ravi <bhavanicodes@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<=3.12.*"
sqlparse = "^0.5.1"
pydantic = "^2.9.2"
sqlmodel = "^0.0.22"
pydantic-settings = "^2.6.0"

[tool.poetry.group.postgresql.dependencies]
psycopg2 = "^2.9.10"

[tool.poetry.group.mongodb.dependencies]
pymongo = "^4.10.1"

[tool.poetry.group.bigquery.dependencies]
google-cloud-bigquery = "^3.26.0"



[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"

[tool.poetry.dev-dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.12.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"